# OCI_GenAI_access_gateway

./: .gitignore  Dockerfile  docker-compose.yaml  docker_compose.yaml  pyproject.toml  requirements.txt
app/: app.py  config  config.py  models.yaml
docker/: Dockerfile  docker-compose.yaml
